jsonschemadsl2ecore.trafo.opt/test/test39/invalidtests/example7.test39
{
	"family":{
		"personalInfo":{
			 "name":"john",
			"surname":"doe"
		},
		"professionalInfo":{
			"job":"engineer",
			"level":1
		},
		"father":"Peppe"
	},
	"telephone":"05040404",
	"country":"Italia"
}